operators-helm/operators/envoy-gateway/resources/homelab-gateway/routes/adguard/adguard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-route
  namespace: adguard
spec:
  parentRefs:
  - name: prod-web
    namespace: envoy-gateway-system
  hostnames:
    - adguard.jeremymr.dev
  rules:
  - backendRefs:
    - name: adguard-adguard-home
      port: 3000
